added language change button

--- a/dla.html
+++ b/dla.html
@@ -83,6 +83,7 @@
             <p><strong>Run Time:</strong> 8 minutes 20 seconds</p>
         </div>
 
+        <!-- These buttons can be hidden in style-movies.css -->
         <section id="nav-buttons-section" class="nav-sections hidden-by-default">
             <a href="#listening"><button>Listening</button></a>
             <a href="#comprehension1"><button>Test Your Understanding</button></a>
@@ -296,6 +297,7 @@
     <footer>
         <div id="footer-placeholder"></div>
     </footer>
+    <script src="script.js"></script>
     <script src="script-movies.js"></script>
     <script>
         // Initialize the page manager with the data defined above
