--- a/index_ko.html
+++ b/index_ko.html
@@ -13,7 +13,7 @@
     <header id="header-placeholder"></header>
 
     <div class="page-content-wrapper">
-        <h1>Welcome to English Practice With Short Films!</h1>
+        <h1>한국어: Welcome to English Practice With Short Films!</h1>
 
         <section class="introduction">
             <p>Welcome to our platform designed to help you improve your English skills through the engaging medium of short films. Here, you'll find interactive exercises focused on listening comprehension, vocabulary building, and understanding real-world English usage.</p>
